= HEAD
  * Major Enhancements
    * Enable multi-node mode (#11)
  * Bug Fixes
    * Properly determine whether function or module is missing.

= 2.4.0 / 2010-05-21
  * Minor Additions
    * Add -E cli option for setting extra Erlang VM options

= 2.3.0 / 2010-05-17
  * Minor Additions
    * Add 'halt' command for gracefully shutting down

= 2.2.1 / 2010-05-13
  * Minor Changes
    * Increase TCP backlog from 5 to 128

= 2.2.0 / 2010-03-12
  * Minor Additions
    * Set procline for external Ruby handlers

= 2.1.0 / 2010-02-20
  * Major Additions
    * Add access logging

= 2.0.0 / 2010-02-16
  * Major Changes
    * Use configuration file for defining handlers
    * Add Native Erlang modules
    * Abstract handler logic to support handlers in any language
    * Add High/Low connection queues
    * Remove Ruby DSL (must use Ernie.expose now)

= 1.3.0 / 2009-11-30
  * API Additions
    * Add loglevel for setting log level
    * Add Ernie.auto_start bool
  * Major changes
    * Better logging granularity

= 1.2.0 / 2009-11-23
  * API Additions
    * Add Ernie.expose
  * Internal Changes
    * Remove 15s internal timeout

= 1.1.0 / 2009-10-28
  * Major changes
    * Remove dependency on Erlectricity
    * Simplify processing loop

= 1.0.0 / 2009-10-19
  * No Changes. Production ready!

= 0.4.0 / 2009-10-08
  * Major changes
    * Convert to use BERT gem.